ci(github): hard-coding Node versions as GitHub Actions don't support workflow variables
Related tickets: re actions/runner#2372

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,18 +10,13 @@ on:
 permissions:
   contents: read
 
-env:
-  NODE_VERSION_ACTIVE: 22.x
-  NODE_VERSION_MAINTENANCE: 20.x
-  NODE_VERSION_MAINTENANCE_PREVIOUS: 18.x
-
 jobs:
 
   lint:
     name: 'Lint'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: npm ci
       command: make lint
 
@@ -29,7 +24,7 @@ jobs:
     name: 'Compile'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=libs install
       command: make COMPILE_SCOPE=libs compile
       upload-artifact-name: 'compiled-libs'
@@ -46,7 +41,7 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test
@@ -60,7 +55,7 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: ${{ env.NODE_VERSION_MAINTENANCE }}
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test-no-coverage
@@ -72,7 +67,7 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: ${{ env.NODE_VERSION_MAINTENANCE_PREVIOUS }}
+      node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test-no-coverage
@@ -85,7 +80,7 @@ jobs:
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       runs-on: 'windows-latest'
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test-no-coverage
@@ -108,7 +103,7 @@ jobs:
           "playwright-web"
         ]
       runs-on: 'ubuntu-latest'
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: |
@@ -131,7 +126,7 @@ jobs:
           "protractor-web"
         ]
       runs-on: 'ubuntu-latest'
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
@@ -166,7 +161,7 @@ jobs:
           "webdriverio-web-webdriver",
         ]
       runs-on: 'ubuntu-latest'
-      node-version: ${{ env.NODE_VERSION_ACTIVE }}
+      node-version: 22.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
@@ -194,7 +189,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4
         with:
-          node-version: ${{ env.NODE_VERSION_ACTIVE }}
+          node-version: 22.x
 
       - name: Install Node Modules
         uses: bahmutov/npm-install@v1
@@ -244,6 +239,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test-linux-node-lts-active
+      - test-linux-node-lts-maintenance
+      - test-linux-node-lts-maintenance-previous
       - test-windows-node-lts-active
       - test-integration
       - test-integration-playwright
@@ -269,7 +266,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4
         with:
-          node-version: ${{ env.NODE_VERSION_ACTIVE }}
+          node-version: 22.x
 
       - name: Install Node Modules (root)
         uses: bahmutov/npm-install@v1
