chore(github): removed site-related script since they're no longer needed
Serenity/JS website-related code has now moved to github.com/serenity-js/serenity-js.org

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "compile:@serenity-js": "lerna run compile --scope '@serenity-js/*'",
     "compile:@integration": "lerna run compile --scope '@integration/*'",
     "compile:@examples": "lerna run compile --scope '@examples/*'",
-    "compile:@documentation": "lerna run compile --scope '@documentation/*'",
     "test": "lerna run test --scope '@serenity-js/*'",
     "test:no-coverage": "lerna run test:no-coverage --scope '@serenity-js/*'",
     "integration-test:all": "lerna run test --concurrency 1 --scope '@integration/*'",
@@ -70,7 +69,6 @@
     "integration-test:webdriverio-web": "lerna run test --scope '@integration/webdriverio-web'",
     "integration-test:webdriverio-web-devtools": "lerna run test:devtools --stream --scope '@integration/webdriverio-web'",
     "integration-test:webdriverio-web-webdriver": "lerna run test:webdriver --stream --scope '@integration/webdriverio-web'",
-    "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/coverage-merge.ts",
     "coverage:report": "c8 report --merge-async --reporter=html --reporter=lcov --reporter=text-summary --temp-directory=./target/coverage/tmp --report-dir=./target/coverage",
@@ -78,12 +76,10 @@
     "commit": "bin/commit.ts",
     "lerna": "lerna",
     "lerna:bootstrap:all": "lerna bootstrap",
-    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:site": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@integration/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore='@documentation/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
-    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore='@documentation/*' --ignore '@examples/*' --include-dependencies",
-    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore='@documentation/*' --ignore '@integration/*' --include-dependencies",
-    "lerna:bootstrap:@documentation": "lerna bootstrap --scope '@serenity-js/*' --scope '@documentation/*' --ignore '@examples/*' --ignore='@integration/*' --include-dependencies",
+    "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore '@examples/*' --include-dependencies",
+    "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
+    "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore '@examples/*' --include-dependencies",
+    "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore '@integration/*' --include-dependencies",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
     "lerna:test:publish": "lerna publish --no-git-tag-version --no-push",
