--- a/integration/webdriverio-jasmine/package.json
+++ b/integration/webdriverio-jasmine/package.json
@@ -32,10 +32,10 @@
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
-    "@wdio/cli": "9.2.8",
-    "@wdio/local-runner": "9.2.8",
+    "@wdio/cli": "9.2.11",
+    "@wdio/local-runner": "9.2.11",
     "@wdio/spec-reporter": "9.2.8",
-    "webdriverio": "9.2.1"
+    "webdriverio": "https://pkg.pr.new/webdriverio/webdriverio@13857"
   },
   "devDependencies": {
     "@types/mocha": "10.0.9",
