chore(webdriverio): updated test dependency on webdriverio

--- a/integration/webdriverio-jasmine/package.json
+++ b/integration/webdriverio-jasmine/package.json
@@ -35,7 +35,7 @@
     "@wdio/cli": "9.2.11",
     "@wdio/local-runner": "9.2.11",
     "@wdio/spec-reporter": "9.2.8",
-    "webdriverio": "https://pkg.pr.new/webdriverio/webdriverio@13857"
+    "webdriverio": "9.2.11"
   },
   "devDependencies": {
     "@types/mocha": "10.0.9",
