--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # OS
 .DS_Store
 
+# Legacy browsers for testing Protractor integration
+browsers
+
 # Node
 node_modules
 examples/*/package-lock.json
