--- a/package.json
+++ b/package.json
@@ -75,20 +75,25 @@
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
-    "lerna:bootstrap:all": "lerna bootstrap",
+    "lerna:bootstrap:all": "lerna bootstrap && npm run install:browsers:protractor && npm run install:browsers:playwright",
     "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
+    "lerna:bootstrap:@integration-protractor": "npm run lerna:bootstrap:@integration && npm run install:browsers:protractor",
+    "lerna:bootstrap:@integration-playwright": "npm run lerna:bootstrap:@integration && npm run install:browsers:playwright",
     "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore '@integration/*' --include-dependencies",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
     "lerna:test:publish": "lerna publish --no-git-tag-version --no-push",
+    "install:browsers:protractor": "bin/install-browsers.ts chrome@129 chromedriver@129",
+    "install:browsers:playwright": "npx --no playwright install --with-deps",
     "version:print": "bin/print-versions.ts",
     "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
+    "@puppeteer/browsers": "2.4.1",
     "@types/chai": "4.3.20",
     "@types/chai-as-promised": "7.1.8",
     "@types/istanbul-lib-coverage": "2.0.6",
