refactor(protractor): removed dependency on chromedriver
Serenity/JS will now use Puppeteer do download the required version of Chrome for Testing and
ChromeDriver

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -152,12 +152,12 @@
       "matchPackageNames": [
         "/@commitlint/cli/",
         "/@commitlint/config-conventional/",
+        "/@puppeteer/browsers/",
         "/@types/chai-as-promised/",
         "/@types/istanbul-lib-coverage/",
         "/@types/sinon/",
         "/@types/sinon-chai/",
         "/chai-as-promised/",
-        "/^chromedriver$/",
         "/coveralls/",
         "/cz-conventional-changelog/",
         "/cz-customizable/",
