--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "testing"
   ],
   "scripts": {
+    "postinstall": "npm run postinstall:protractor && npm run postinstall:playwright",
+    "postinstall:protractor": "bin/install-browsers.ts chrome@129 chromedriver@129",
+    "postinstall:playwright": "npx --no playwright install --with-deps",
     "clean": "rimraf target && lerna run clean",
     "cc": "nx reset",
     "lint": "eslint --ext ts --config .eslintrc.yml .",
@@ -75,18 +78,14 @@
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
-    "lerna:bootstrap:all": "lerna bootstrap && npm run install:browsers:protractor && npm run install:browsers:playwright",
+    "lerna:bootstrap:all": "lerna bootstrap",
     "lerna:bootstrap:libs": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:@serenity-js": "lerna bootstrap --scope '@serenity-js/*' --ignore '@examples/*' --ignore '@integration/*' --include-dependencies",
-    "lerna:bootstrap:@integration-protractor": "npm run lerna:bootstrap:@integration && npm run install:browsers:protractor",
-    "lerna:bootstrap:@integration-playwright": "npm run lerna:bootstrap:@integration && npm run install:browsers:playwright",
     "lerna:bootstrap:@integration": "lerna bootstrap --scope '@serenity-js/*' --scope '@integration/*' --ignore '@examples/*' --include-dependencies",
     "lerna:bootstrap:@examples": "lerna bootstrap --scope '@serenity-js/*' --scope '@examples/*' --ignore '@integration/*' --include-dependencies",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
     "lerna:test:publish": "lerna publish --no-git-tag-version --no-push",
-    "install:browsers:protractor": "bin/install-browsers.ts chrome@129 chromedriver@129",
-    "install:browsers:playwright": "npx --no playwright install --with-deps",
     "version:print": "bin/print-versions.ts",
     "prepare": "husky"
   },
@@ -105,7 +104,6 @@
     "c8": "10.1.2",
     "chai": "4.5.0",
     "chai-as-promised": "7.1.2",
-    "chromedriver": "130.0.4",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
