--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/protractor-chrome-130'
     with:
       node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
@@ -65,7 +65,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/protractor-chrome-130'
     with:
       node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
@@ -77,7 +77,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/protractor-chrome-130'
     with:
       runs-on: 'windows-latest'
       node-version: 22.x
@@ -94,7 +94,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/protractor-chrome-130'
     with:
       modules: |
         [
@@ -118,7 +118,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/protractor-chrome-130'
     with:
       modules: |
         [
@@ -138,7 +138,7 @@ jobs:
     needs:
       - lint
       - compile
-    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/protractor-chrome-130'
     with:
       modules: |
         [
