refactor(webdriverio): use Puppeteer to download the latest stable Chrome browser

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "scripts": {
     "postinstall": "npm run postinstall:protractor && npm run postinstall:playwright",
-    "postinstall:protractor": "bin/install-browsers.ts chrome@129 chromedriver@129",
+    "postinstall:protractor": "npx ts-node bin/install-browsers.ts chrome@129 chromedriver@129",
+    "postinstall:webdriverio": "npx ts-node bin/install-browsers.ts chrome@stable chromedriver@stable",
     "postinstall:playwright": "npx --no playwright install --with-deps",
     "clean": "rimraf target && lerna run clean",
     "cc": "nx reset",
