--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "7.3.0",
     "eslint": "8.57.1",
+    "eslint-plugin-depend": "0.12.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-mocha": "10.5.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
