feat(mocha): support for Mocha 11

--- a/packages/mocha/package.json
+++ b/packages/mocha/package.json
@@ -53,7 +53,7 @@
     "@serenity-js/core": "3.30.0"
   },
   "peerDependencies": {
-    "mocha": "^11.0.1"
+    "mocha": "^10.8.2 || ^11.0.1"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
