--- a/examples/webdriverio-mocha/package.json
+++ b/examples/webdriverio-mocha/package.json
@@ -35,17 +35,17 @@
     "@serenity-js/console-reporter": "^3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/webdriverio-8": "^3.0.0",
+    "@serenity-js/webdriverio": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
-    "@wdio/cli": "8.40.6",
-    "@wdio/globals": "8.40.6",
-    "@wdio/local-runner": "8.40.6",
-    "@wdio/spec-reporter": "8.40.6",
-    "@wdio/reporter": "8.40.6",
+    "@wdio/cli": "9.4.1",
+    "@wdio/globals": "9.4.1",
+    "@wdio/local-runner": "9.4.1",
+    "@wdio/spec-reporter": "9.2.14",
+    "@wdio/reporter": "9.2.14",
     "@types/mocha": "10.0.10",
     "mocha": "11.0.1",
     "npm-failsafe": "1.3.0",
-    "webdriverio": "8.40.6",
+    "webdriverio": "9.4.1",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
   }
