ci(github): group cucumber jobs to reduce the overall pipeline time

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -142,17 +142,7 @@ jobs:
     with:
       modules: |
         [
-          "cucumber-1",
-          "cucumber-2",
-          "cucumber-3",
-          "cucumber-4",
-          "cucumber-5",
-          "cucumber-6",
-          "cucumber-7",
-          "cucumber-8",
-          "cucumber-9",
-          "cucumber-10",
-          "cucumber-11",
+          "cucumber-all",
           "jasmine",
           "mocha",
           "rest",
