ci(renovate): tweaked Renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -65,7 +65,7 @@
         "integration/cucumber-5/**",
         "integration/cucumber-6/**",
         "integration/cucumber-7/**",
-        "integration/cucumber-8-*/**",
+        "integration/cucumber-8-**/**",
         "integration/cucumber-9/**",
         "integration/cucumber-10/**"
       ],
