ci(renovate): enable Cucumber updates for WDIO and Protractor integration tests

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -43,6 +43,7 @@
       ],
       "matchFileNames": [
         "examples/cucumber-*/**",
+        "integration/*-cucumber/**",
         "integration/cucumber-11/**",
         "packages/cucumber/**"
       ],
