--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,12 +14,15 @@ jobs:
 
   lint:
     name: 'Lint'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
-    with:
-      runs-on: 'ubuntu-22.04'
-      node-version: 22.x
-      npm-install-command: npm ci
-      command: make lint
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: ./.github/actions/node-step
+        with:
+          node-version: 22.x
+          npm-install-command: npm ci
+          command: make lint
 
   compile:
     name: 'Compile'
