--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: ./.github/actions/node-step
+      - name: Lint
+        uses: ./.github/actions/node-step
         with:
           node-version: 22.x
           npm-install-command: npm ci
