--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,12 +18,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - name: Lint
-        uses: ./.github/actions/node-step
+      - name: Setup Node
+        uses: ./.github/actions/setup-node
         with:
           node-version: 22.x
           npm-install-command: npm ci
-          command: make lint
+      - name: Lint
+        run: make lint
 
   compile:
     name: 'Compile'
