ci(github): refactored Test Linus LTS Active job to follow the new pattern
Related tickets: re #2664

--- a/.github/actions/upload-compressed-artifact/action.yaml
+++ b/.github/actions/upload-compressed-artifact/action.yaml
@@ -2,11 +2,11 @@ name: 'Upload Compressed Artifact'
 description: 'Compresses and uploads an artifact'
 
 inputs:
-  upload-artifact-name:
+  artifact-name:
     description: 'The name of the artifact to upload after invoking the command'
     type: string
     required: true
-  upload-artifact-path:
+  artifact-path:
     description: 'The paths to include in the uploaded artifact'
     type: string
     required: true
@@ -16,12 +16,12 @@ runs:
   steps:
     - name: Compress artifact
       shell: bash
-      run: 7z a ${{ inputs.upload-artifact-name }}.zip ${{ inputs.upload-artifact-path }}
+      run: 7z a ${{ inputs.artifact-name }}.zip ${{ inputs.artifact-path }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@ff15f0306b3f739f7b6fd43fb5d26cd321bd4de5 # v3
       with:
         retention-days: 3
-        name: ${{ inputs.upload-artifact-name }}
+        name: ${{ inputs.artifact-name }}
         path: |
-          ${{ inputs.upload-artifact-name }}.zip
+          ${{ inputs.artifact-name }}.zip
